@@ -2476,13 +2476,17 @@
 
 .print.time <- function(x) {
 
+   mstyle <- .get.mstyle("crayon" %in% .packages())
+
    hours   <- floor(x/60/60)
    minutes <- floor(x/60) - hours*60
    seconds <- round(x - minutes*60 - hours*60*60, ifelse(x > 60, 0, 2))
 
    cat("\n")
-   cat("Model fitting time:", hours, ifelse(hours == 0 || hours > 1, "hours,", "hour,"), minutes, ifelse(minutes == 0 || minutes > 1, "minutes,", "minute,"), seconds, ifelse(x < 60 || seconds == 0 || seconds > 1, "seconds", "second"))
+   cat(mstyle$message(paste("Model fitting time:", hours, ifelse(hours == 0 || hours > 1, "hours,", "hour,"), minutes, ifelse(minutes == 0 || minutes > 1, "minutes,", "minute,"), seconds, ifelse(x < 60 || seconds == 0 || seconds > 1, "seconds", "second"))))
    cat("\n\n")
+
+}
 
 ############################################################################
 
